--- a/css/1.css
+++ b/css/1.css
@@ -70,7 +70,7 @@ h1{
 }
 mark{
     background:#ff0;
-    color:#000
+    color:#03010e
 }
 small{
     font-size:80%
@@ -388,18 +388,20 @@ body{
 }
 .header--logo{
     display:-webkit-box;
+    padding-top: 50px;
     display:-webkit-flex;
     display:-ms-flexbox;
     display:flex;
     -webkit-box-align:center;
     -webkit-align-items:center;
-    -ms-flex-align:center;
+    -ms-flex-align:start;
     align-items:center;
     text-decoration:none;
     color:#fff
+    
 }
 .header--logo p{
-    margin:0 0 0 10px;
+    margin: 0 0 0 10px;
     font-size:16px;
     font-weight:700;
     text-transform:uppercase
@@ -1120,13 +1122,14 @@ body{
 }
 .contact{
     position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background-image:url("../img/contact-visual.png");
+    top:20%;
+    left:20%;
+    width:70%;
+    height:70%;
+    background-image:url("../Images/schoolDroneShot.jpg");
     background-position:center;
     background-size:cover;
+    background-color:(transparent 50%, black);
     background-repeat:no-repeat
 }
 .contact--lockup{
