--- a/css/1.css
+++ b/css/1.css
@@ -1022,6 +1022,7 @@ body{
     display:-webkit-flex;
     display:-ms-flexbox;
     display:flex;
+    flex-wrap: wrap;
     max-width:1200px;
     -webkit-box-pack:justify;
     -webkit-justify-content:space-between;
@@ -1042,8 +1043,11 @@ body{
     background-size:cover;
     background-repeat:no-repeat
 }
-.about--options>a:nth-child(1){
+.about--options>{
     background-image:url("../img/about-winners.jpg")
+}
+.exodia{
+    background-image:url("../Images/vaibhavLogo.png")
 }
 .about--options>a:nth-child(2){
     background-image:url("../img/about-philosophy.jpg")
@@ -1117,7 +1121,31 @@ body{
         display:none
     }
     .about--options{
-        display:none
+        display:-webkit-box;
+        display:-webkit-flex;
+        display:-ms-flexbox;
+        display:flex;
+        flex-wrap: wrap;
+        max-width:1200px;
+        -webkit-box-pack:justify;
+        -webkit-justify-content:space-between;
+        -ms-flex-pack:justify;
+        justify-content:space-between;
+        margin:0;
+        padding:0;
+        list-style:square
+    }
+
+    .about--options>a{
+        position:relative;
+        width:100px;
+        height:150px;
+        text-decoration:none;
+        color:#fff;
+        border:10px solid #0f33ff;
+        background-position:center;
+        background-size:cover;
+        background-repeat:no-repeat
     }
 }
 .contact{
